add postgraphile, bootstrap script, and initial migrations

--- a/.pgshrc
+++ b/.pgshrc
@@ -1,6 +1,8 @@
 {
   "mode": "url",
   "vars": {
-    "url": "DATABASE_URL"
+    "url": "DATABASE_URL",
+    "super_user": "PG_SUPER_USER",
+    "super_password": "PG_SUPER_PASSWORD"
   }
 }
