--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "knex": "^0.16.3",
+    "postgraphile": "^4.4.0-alpha.0",
     "ts-node": "^8.0.2"
   },
   "devDependencies": {
