add pg super user vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/...
 SESSION_SECRET=
 PORT=3000
+
+PG_SUPER_USER=postgres
+PG_SUPER_PASSWORD=postgres
