--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "graphql-playground-middleware-express": "^1.7.12",
     "knex": "^0.16.3",
     "postgraphile": "^4.4.0-alpha.0",
     "ts-node": "^8.0.2"
