--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "graphile-utils": "^4.3.1",
     "graphql-playground-middleware-express": "^1.7.12",
+    "graphql-resolvers": "^0.3.2",
     "knex": "^0.16.3",
     "postgraphile": "^4.4.0-alpha.0",
     "ts-node": "^8.0.2"
@@ -29,6 +31,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
+    "@types/graphql-resolvers": "^0.2.0",
     "@types/knex": "^0.15.2",
     "dotenv-cli": "^1.4.0",
     "nodemon": "^1.18.9",
