--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphile/pg-pubsub": "^4.4.0-alpha.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
