auth & event scaffolding

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@graphile-contrib/pg-simplify-inflector": "^4.0.0-alpha.0",
     "@graphile/pg-pubsub": "^4.4.0-alpha.0",
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
@@ -24,13 +25,17 @@
     "graphile-utils": "^4.3.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "graphql-resolvers": "^0.3.2",
+    "graphql-subscriptions": "^1.0.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "postgraphile": "^4.4.0-alpha.0",
     "stripe": "^6.25.1",
     "ts-node": "^8.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
@@ -38,6 +43,8 @@
     "@types/graphql-resolvers": "^0.2.0",
     "@types/knex": "^0.15.2",
     "@types/lodash": "^4.14.121",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
     "@types/stripe": "^6.19.7",
     "dotenv-cli": "^1.4.0",
     "nodemon": "^1.18.9",
