--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/...
-SESSION_SECRET=
 PORT=3000
+NODE_ENV=development
 
+DATABASE_URL=postgres://greatbear:greatbear@localhost:5432/...
 PG_SUPER_USER=postgres
 PG_SUPER_PASSWORD=postgres
 
-NODE_ENV=development
+SESSION_SECRET=
+STRIPE_SECRET_KEY=
+ISO_CURRENCY=cad
+
+WAITER_PREP_SEC=5
+WAITER_VERIFICATION_RATE=1.0
+CHEF_PREP_SEC=10
+DRIVER_DISTANCE_KM=1.5
+DRIVER_SPEED_KPH=30
+DRIVER_UPDATE_HZ=2
+DRIVER_DROP_PACKAGE_SEC=3
