--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=development
+FRONTEND_URL=http://localhost:4000
 
 DATABASE_URL=postgres://greatbear:greatbear@localhost:5432/...
 PG_SUPER_USER=postgres
