--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql-subscriptions": "^1.0.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "postgraphile": "^4.4.0-alpha.0",
