--- a/package.json
+++ b/package.json
@@ -13,45 +13,44 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@graphile-contrib/pg-simplify-inflector": "^4.0.0-alpha.0",
-    "@graphile/pg-pubsub": "^4.4.0-alpha.0",
-    "bcrypt": "^3.0.4",
+    "@graphile-contrib/pg-simplify-inflector": "^5.0.0-beta.1",
+    "@graphile/pg-pubsub": "^4.4.5",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "graphile-utils": "^4.3.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "graphile-utils": "^4.4.5",
     "graphql-playground-middleware-express": "^1.7.12",
-    "graphql-resolvers": "^0.3.2",
-    "graphql-subscriptions": "^1.0.0",
-    "knex": "^0.16.3",
+    "graphql-resolvers": "^0.3.3",
+    "graphql-subscriptions": "^1.1.0",
+    "knex": "^0.19.5",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "postgraphile": "^4.4.0-alpha.0",
+    "postgraphile": "^4.4.4",
     "stripe": "^6.25.1",
-    "ts-node": "^8.0.2"
+    "ts-node": "^8.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.4",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
-    "@types/express-session": "^1.15.12",
-    "@types/graphql-resolvers": "^0.2.0",
-    "@types/knex": "^0.15.2",
-    "@types/lodash": "^4.14.121",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
+    "@types/express-session": "1.15.14",
+    "@types/graphql-resolvers": "^0.2.2",
+    "@types/lodash": "^4.14.144",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
     "@types/stripe": "^6.19.7",
     "dotenv-cli": "^1.4.0",
     "nodemon": "^1.18.9",
     "pgsh": "^0.8.2",
-    "tslint": "^5.12.1",
+    "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.3.1"
+    "typescript": "^3.6.4"
   }
 }
